# bwforgectl

./: .gitignore  AGENTS.md  DEVELOPER.md  README.md  fake_vault.json  pyproject.toml  setup.py
.github/workflows/: release.yml
bw_forge_ctl/: __init__.py  bwclient.py  cli.py  credentials.py  forge_api.py  gitacct.py  importer.py  pgp.py  ssh_config.py
debian/: changelog  control  copyright  rules
diagrams/: classes.puml  credential-resolution.puml  modules.puml  session-health.puml  sync-disk-to-vault.puml  sync-vault-to-disk.puml
docs/: accounts.md  git-with-ssh.md  ssh-config.example
scripts/: bw-bash-completion.bash  bw-zsh-comoletion.zsh  dev.sh  import-ssh-to-bitwarden.sh  release.sh
ssh_bw/: __init__.py  bwclient.py  cli.py  credentials.py  hostscan.py  importer.py  sshscan.py
tests/: conftest.py  fake-bw  fake_bw.py  test_bwclient.py  test_credentials.py  test_driver.sh  test_forge_api.py  test_gitacct.py  test_helpers.py  test_importer.py  test_ssh_config.py  test_sshscan.py  test_system.sh
