[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-bw"
version = "1.0.0"
description = "Sync local SSH key pairs (and PGP notes) with a Bitwarden vault"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "pilakkat1964", email = "pilakkat1964@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=41",
]

[project.urls]
Homepage = "https://github.com/pilakkat1964/ssh-bw"
Repository = "https://github.com/pilakkat1964/ssh-bw"

[project.scripts]
ssh-bw = "ssh_bw.cli:main"

[tool.setuptools.packages.find]
include = ["ssh_bw*"]
