[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "bwforgectl"
version = "1.0.0"
description = "Manage SSH keys and Git credentials via Bitwarden vault"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "pilakkat1964", email = "pilakkat1964@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=41",
]

[project.urls]
Homepage = "https://github.com/skp64-pvt01/bwforgectl"
Repository = "https://github.com/skp64-pvt01/bwforgectl"

[project.scripts]
bwforgectl = "bw_forge_ctl.cli:main"
ssh-bw = "bw_forge_ctl.cli:main"

[tool.setuptools.packages.find]
include = ["bw_forge_ctl*"]
